src/kubernetes/Yamls/vanilla-deploy-v.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanilla-deployment
  labels:
    app: vanilla-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vanilla-pod
  template:
    metadata:
      labels:
        app: vanilla-pod
    spec:
      hostNetwork: true
      containers:
        - name: vanilla-container
          image: arafkarsh/ms-vanilla-service:0.3.4-alpaquita-21
          # Only for testing purpose -  use IfNotPresent
          imagePullPolicy: Always
          args:
            - "-SPRING_DATASOURCE_URL=jdbc:postgresql://database-service:5433/ms_vanilla_334"
          ports:
            - containerPort: 9334
              hostPort: 9334
          livenessProbe:
            httpGet:
              path: /ms-vanilla/api/v1/service/live
              port: 9334
          readinessProbe:
            httpGet:
              path: /ms-vanilla/api/v1/service/ready
              port: 9334
          resources:
            limits:
              cpu: 1000m
              memory: 1536Mi
            requests:
              cpu: 1000m
              memory: 1536Mi
