src/kubernetes/Yamls/vanilla-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  type: ExternalName
  externalName: host.docker.internal
